Fix grip section icon not visible

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -686,7 +686,6 @@
                         svg {
                             cursor: grab;
                             &:first-child {
-                                height: 3px;
                                 margin-bottom: 2px;
                             }
                         }
